# API_DEVSOLUTION_DB

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
app/: config.py  main.py  model.py  request.py  routes.py  schema.py
data/pgadmin/: pgadmin4.db
data/pgadmin/sessions/: 219107d0-2d29-4955-b24b-4de180ad18c5  84aff5d7-e1fe-4c60-8ac3-ca881f9b2b2c
data/postgres/: postmaster.pid
data/postgres/base/1/: 2619  2619_vm  2696  2840  2841  pg_internal.init
data/postgres/base/5/: pg_internal.init
data/postgres/global/: 1260  pg_control  pg_internal.init
data/postgres/pg_stat/: pgstat.stat
tests/: test_api.py
